# cpbl

./: .gitignore  README.md  pyproject.toml
notebook/: test.ipynb
src/scraping/: config.py
src/utils/: env_loader.py
